Fix error then title have big article

--- a/CBZ_To_Telegraph.csproj
+++ b/CBZ_To_Telegraph.csproj
@@ -41,7 +41,9 @@
       <None Update="appsettings.example.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Remove="appsettings.json" />
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
